zdx: 优化导航显示排序